--- a/package.json
+++ b/package.json
@@ -28,8 +28,12 @@
   },
   "homepage": "https://github.com/zhangchen915/mdict-ts",
   "dependencies": {
+    "@types/node": "^11.11.1",
     "@types/pako": "^1.0.0",
-    "pako": "^1.0.8"
+    "buffer-dataview": "0.0.2",
+    "pako": "^1.0.8",
+    "text-encoding": "^0.7.0",
+    "xmldom": "^0.1.27"
   },
   "devDependencies": {
     "typescript": "^3.3.3333"
